[FIX] - spacing issue downlad brochure & location height

--- a/src/widgets/learn-more/learn-more.scss
+++ b/src/widgets/learn-more/learn-more.scss
@@ -93,6 +93,9 @@
       padding: 40px;
       height: 340px;
     }
+    a.link.with-icon{
+      padding:0;
+    }
   }
   &__title{
     width: 100%;
