--- a/src/widgets/overview-text/overview-text.scss
+++ b/src/widgets/overview-text/overview-text.scss
@@ -57,6 +57,7 @@
       }
       p{
         margin: 0 0 15px;
+        color:$primary;
         @include lg{
           margin: 15px 0 20px;
         }
